--- a/table-card-display/index.html
+++ b/table-card-display/index.html
@@ -1,69 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<script src="./script.js"></script>
+		<title>Document</title>
+	</head>
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1.0">
+	<body>
+		<div class="formContainer">
+			<h1>Personal Details</h1>
 
-    <script src="./script.js"></script>
-    <title>Document</title>
-  </head>
+			<form id="userInputs">
+				<!--<label for="fname">Full Name:</label><br>-->
+				<input type="text" id="fname" name="fname" placeholder="Full Name" /><br />
+				<!--<label for="country">Country:</label><br>-->
+				<input type="text" id="country" name="country" placeholder="Country" /><br />
+				<!--<label for="number">Number:</label><br>-->
+				<input type="text" id="number" name="number" placeholder="Number" /><br />
+				<input type="submit" id="submit" value="Submit" onclick="submitUser()" />
+			</form>
+		</div>
 
-  <body>
-    <div>
-      <form id="userInputs">
-        <!-- The for attribute is to get the ID of the input element -->
-        <label>Name:</label><br>
-        <input type="text" name="name"><br>
+		<!--Switch view buttons-->
+		<div class="flexContainer">
+			<button onclick="switchView('table')">Table View</button>
 
-        <!-- What does this for do? -->
-        <label>Age:</label><br>
-        <input type="number" min="0" name="age"><br><br>
-        <input type="submit" value="Submit" onclick="submitUser()">
-      </form>
+      <!-- For some reason, it has to be grid, otherwise it won't work-->
+			<button onclick="switchView('grid')">Card View</button>
+		</div>
 
-    </div>
+		<!--Table display results-->
+		<div>
+			<table id="userTable">
+				<thead>
+					<tr>
+						<th>Full Name</th>
+						<th>Country</th>
+						<th>Number</th>
+					</tr>
+				</thead>
+				<tbody id="tableBody"></tbody>
+			</table>
+		</div>
 
-    <div>
-      <button onclick="switchCardView()">Card View</button>
-      <button onclick="switchTableView()">Table View</button>
-    </div>
-
-    <div>
-      <table id="userTable">
-        <tr>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Id</th>
-        </tr>
-      </table>
-    </div>
-
-    <div id="userCards">
-    </div>
-  </body>
-
-  <style>
-    /* 
-		Don't know what does this do, but with out this, the table
-		showing differently, all the cells are broken
-		 */
-    table {
-      border-collapse: collapse;
-    }
-
-    td,
-    th {
-      border: 1px solid #dddddd;
-    }
-
-    #userCards>div {
-      max-width: 300px;
-      border: 1px solid black;
-      margin: 2rem
-    }
-  </style>
-
+		<!--Card display results-->
+		<div class="cardContainer" id="cardView"></div>
+	</body>
 </html>
